fix tiny z-index issue

--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -21,7 +21,7 @@
     top: 0;
     left: -100%;
     transition: 425ms;
-    z-index: 2;
+    z-index: 3;
 }
 
 .nav-menu.active{
